<resources>
    <string name="app_name">基于Android的语音文字识别系统</string>
    <string name="app_id">b5d063a5</string>
    <string name="class_name">className</string>
    <string name="open_folder">打开文件夹</string>
    <string name="delete_text">删除文字</string>
    <string name="audio_control">音频播放控制</string>
    <string name="cancel_synthesis_teak">停止生成语音</string>
    <string name="input_Hint">请输入</string>
    <string name="text_tts_source">
        科大讯飞作为智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有技术成果。科大讯飞是我国以语音技术为产业化方向的“国家863计划产业化基地”.....
    </string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="text_show_contacts">上传词表显示</string>
    <string name="text_show_iat_result">听写结果显示</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>
    <string name="face_model_delete">人脸模型删除</string>
    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="emot_entries">
        <item>正常</item>
        <item>高兴</item>
        <item>悲伤</item>
        <item>生气</item>
    </string-array>
    <string-array name="emot_values">
        <item>neutral</item>
        <item>happy</item>
        <item>sad</item>
        <item>angry</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="input_way_entries">
        <item>直接替换原有内容</item>
        <item>粘贴在输入框末尾</item>
    </string-array>
    <string-array name="input_way_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="language_entries">
        <item>中文</item>
        <item>英文</item>
        <item>日语</item>
        <item>俄语</item>
        <item>西班牙语</item>
        <item>法语</item>
        <item>韩语</item>
    </string-array>
    <string-array name="language_values">
        <item>zh_cn</item>
        <item>en_us</item>
        <item>ja_jp</item>
        <item>ru-ru</item>
        <item>es_es</item>
        <item>fr_fr</item>
        <item>ko_kr</item>

    </string-array>
    <string-array name="language_type_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_type_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>
    <string name="text_en_word">"[word]\napple\nbanana\norange"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_en_chapter">"It is never too old to learn, A good beginning makes a good ending."</string>
    <string name="text_en_simple_expression">"W2Nob2ljZV0KMS4gV2hhdCBzaG91bGQgSSBkbyB3aXRoIHRoZSB0b3BpYz8KMi4gSG93IGNhbiBJIGRlYWwgd2l0aCB0aGUgdG9waWM/CjMuIFdoYXQgY2FuIEkgZG8gd2l0aCB0aGUgdG9waWM/CjQuIFdoYXQgc2hvdWxkIEkgZG8gd2l0aCB0aGlzIHN1YmplY3Q/CjUuIEhvdyBjYW4gSSBkZWFsIHdpdGggdGhpcyBzdWJqZWN0Pwo2LiBXaGF0IGNhbiBJIGRvIHdpdGggdGhpcyBzdWJqZWN0Pwo3LiBXaGF0IHNob3VsZCBJIGRvIHdpdGggdGhpcyB0aXRsZT8KOC4gSG93IGNhbiBJIGRlYWwgd2l0aCB0aGlzIHRpdGxlPwo5LiBXaGF0IGNhbiBJIGRvIHdpdGggdGhpcyB0aXRsZT8KMTAuIFdoYXQgc2hvdWxkIEkgbWFuYWdlIHRoaXMgdGl0bGU/CjExLiBIb3cgY2FuIEkgbWFuYWdlIHRoaXMgdGl0bGU/CjEyLiBXaGF0IGNhbiBJIG1hbmFnZSB0aGlzIHRpdGxlPwoxMy4gV2hhdCBzaG91bGQgSSBtYW5hZ2UgdGhpcyBzdWJqZWN0PwoxNC4gSG93IGNhbiBJIG1hbmFnZSB0aGlzIHN1YmplY3Q/CjE1LiBXaGF0IHNob3VsZCBJIG1hbmFnZSB0aGlzIHRvcGljPwoxNi4gSG93IGNhbiBJIG1hbmFnZSB0aGlzIHRvcGljPwoxNy4gV2hhdCBjYW4gSSBtYW5hZ2UgdGhpcyB0b3BpYz8KMTguIEhvdyBzaG91bGQgSSBkZWFsIHdpdGggdGhpcyB0b3BpYz8KMTkuIEhvdyBzaG91bGQgSSBkZWFsIHdpdGggdGhpcyB0aXRsZT8KMjAuIEhvdyBzaG91bGQgSSBkZWFsIHdpdGggdGhpcyBzdWJqZWN0Pwpba2V5d29yZHNdCndoYXQgZG8gdG9waWMgfCBob3cgZGVhbCB0b3BpYyB8IHdoYXQgZG8gc3ViamVjdCB8IGhvdyBkZWFsIHN1YmplY3QgfCB3aGF0IGRvIHRpdGxlIHwgaG93IGRlYWwgdGl0bGUgfCB3aGF0IG1hbmFnZSB0aXRsZSB8IGhvdyBtYW5hZ2UgdGl0bGUgfCB3aGF0IG1hbmFnZSBzdWJqZWN0IHwgaG93IG1hbmFnZSBzdWJqZWN0IHwgd2hhdCBtYW5hZ2UgdG9waWMgfCBob3cgbWFuYWdlIHRvcGljCltzY3JpcHRdClc6IENvbmdyYXR1bGF0aW9ucywgVG9tISBZb3UgZ2F2ZSBhIHdvbmRlcmZ1bCBzcGVlY2ggeWVzdGVyZGF5IG1vcm5pbmcuCk06IFRoYW5rIHlvdSBNYXJ5LgpXOiBJIHdpbGwgZ2l2ZSBhIHNwZWVjaCBuZXh0IFdlZG5lc2RheSBpbiBteSBFbmdsaXNoIGNsYXNzLCBidXQgSSBhbSBub3QgZnVsbHkgcHJlcGFyZWQgeWV0LiBDYW4geW91IGdpdmUgbWUgc29tZSBhZHZpY2U/Ck06IFN1cmUuIFdoYXQncyB5b3VyIHRvcGljPwpXOiBXZWxsLCBJIGFtIGFsd2F5cyBjb25jZXJuZWQgYWJvdXQgZW52aXJvbm1lbnRhbCBpc3N1ZXMsIHNvIG15IHRvcGljIGlzIEVudmlyb25tZW50YWwgUHJvdGVjdGlvbi4KTTogVGhpcyBpcyBhIGdvb2QgdG9waWMsIGJ1dCBpdCBpcyB0b28gYmlnLgpbcXVlc3Rpb25dCuaIkeivpeWmguS9leWkhOeQhui/meS4qumimOebru+8nwpbbWFjYW5zd2VyXQpZb3UgaGF2ZSB0byBuYXJyb3cgZG93biB5b3VyIHRvcGljLiBGb3IgZXhhbXBsZSwgeW91IG1heSB0YWxrIGFib3V0IHdoYXQgY29sbGVnZSBzdHVkZW50cyBjYW4gZG8gdG8gcHJvdGVjdCBvdXIgZW52aXJvbm1lbnQuIEFmdGVyIHRoYXQsIHlvdSBuZWVkIHRvIGRvIHNvbWUgcmVzZWFyY2ggdG8gY29sbGVjdCByZWxldmFudCBpbmZvcm1hdGlvbiBhcyBtdWNoIGFzIHBvc3NpYmxlLiBUaGVuLCB5b3Ugc2hvdWxkIG9yZ2FuaXplIHlvdXIgYXJndW1lbnRzIHdlbGwuIExvZ2ljYWwgb3JnYW5pemF0aW9uIGlzIHZlcnkgaW1wb3J0YW50Lg=="</string>
    <string name="text_en_read_choice">"W2Nob2ljZV0KMS4gU25ha2VzLgoyLiBDaGlsZHJlbi4KMy4gQ2F0cy4KW2tleXdvcmRzXQpjYXRzCltxdWVzdGlvbl0KV2hhdCBkaWQgdGhlIHdvbWFuIGRpc2xpa2U/"</string>
    <string name="sr_messages_header">语音识别参数设置</string>
    <string name="voice_synthesis_hint">→使用指引←\n(此为提示信息，输入框可以直接输入文字)：\n
        &#160;&#160;&#160;&#160;欢迎使用语音合成模块，当前语音合成SDK由科大讯飞提供，采用在线合成方式。\n
        &#160;&#160;&#160;&#160;语音合成是将一段文字转换为语音，可根据需要合成出不同音色、语速和语调的声音，让机器像人一样开口说话。\n
        &#160;&#160;&#160;&#160;合成语音的语言，方言和特征基本由发音人决定——即不同的发音人，支持不一样的语言、方言和特征。\n
        &#160;&#160;&#160;&#160;当前应用在线语音合成支持的语种、方言有：中文、英文、粤语、台湾普通话、四川话、东北话、河南话、湖南话、陕西话\n
        &#160;&#160;&#160;&#160;语言为中英文的发音人可以支持中英文的混合朗读。英文发音人只能朗读英文，中文无法朗读。汉语发音人只能朗读中文，遇到英文会以单个字母的方式进行朗读\n
        &#160;&#160;&#160;&#160;当前界面的右上角“头像”按钮可选择发音人\n
        &#160;&#160;&#160;&#160;语音合成的其他参数【语速、音量、语调、音频流类型】可点击右上角“设置”按钮跳转至设置界面进行选择\n\n

        &#160;&#160;&#160;&#160;SDK接口一次限制8192字节，超长文本请按照自然段切分，分多次合成请求进行。\n
        &#160;&#160;&#160;&#160;需要进行语音合成的文字可以通过在输入框输入，也可以通过左下角第一个“文件夹”按钮选取手机中的txt/docx文件来写入\n
        \n
        &#160;&#160;&#160;&#160;底部按钮功能介绍：\n
        &#160;&#160;&#160;&#160;从左向右第一个按钮：打开文件管理器选择文本文件\n
        &#160;&#160;&#160;&#160;默认选取文件的文字会添加在输入框的末尾，如果需要直接替换输入框中已有内容，请点击右上角“设置”按钮进行修改\n
        &#160;&#160;&#160;&#160;第二个：清除输入框文字\n
        &#160;&#160;&#160;&#160;第三个：控制合成音频播放，点击后可以“开始播放”，再次点击即“暂停”，如需重新合成请点击右侧的“取消”\n
        &#160;&#160;&#160;&#160;第四个：取消当前播放任务\n
        \n
        如果还有其他疑问，请在主页的介绍信息处添加开发者联系方式进行反馈\n
</string>
    <string name="common_phone_input_hint">邮箱号</string>
    <string name="register_password_hint2">再次输入密码</string>
    <string name="register_password_hint1">设置8–18位仅包含英文字母和阿拉伯数字的密码</string>
    <string name="personal_data_avatar">头像</string>
    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>
    <string name="personal_data_address">生日</string>
    <string name="personal_data_birthday_hint">2023年8月14日</string>
    <string name="personal_data_tts_usage">语音合成今日用量</string>
    <string name="personal_ocr_usage">图像识文今日用量</string>
    <string name="personal_data_asr_usage">语音识别今日用量</string>
    <string name="personal_data_tts_usage_count">语音合成总用量</string>
    <string name="personal_ocr_usage_count">图像识文总用量</string>
    <string name="personal_data_asr_usage_count">语音识别总用量</string>
    <string name="personal_data_usage_count">NAN</string>
    <string name="personal_data_usage_hint">暂不可用</string>
    <string name="personal_data_sex">性别</string>
    <string name="personal_data_sex_default">神秘(O_o)??</string>
    <string name="to_feedback">使用中遇到问题？</string>
    <string name="to_application">\t\t每日用量不够？</string>
    <string name="application_Hint">去申请</string>
    <string name="feedback_Hint">去反馈</string>
    <string name="avatar_description">avatar</string>
    <string name="password_forget_title">忘记密码</string>
    <string name="answer_input_hint">密保问题答案</string>
    <string name="answer">\t\t密保问题</string>
    <string name="common_step_next">重置</string>
    <string name="reset_password">重置密码</string>
    <string name="wake_demo_hint">是否开启语音唤醒功能？</string>
    <string name="wu_messages_header">系统参数设置</string>
    <string name="wake_up_enable">wake_up_state</string>
    <string name="wake_up_thresh">wake_up_thresh</string>
    <string name="wake_up_net_mode">语音唤醒网络优化</string>
    <string name="wake_demo_net">唤醒持续优化网络模式</string>
    <string name="wake_up_net_mode_explain">开启优化功能，可允许向服务端发送本地挑选数据，本地唤醒 SDK 自动挑选音频数据上传至云端，进行训练生成优化唤醒资源</string>
    <string name="wake_up_thresh_title">语音唤醒门限值</string>
</resources>