<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.meteor.activity.RestPasswordActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_forget_title" />

    <com.hjq.widget.view.RegexEditText
        android:id="@+id/et_password_forget_email"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:drawableStart="@drawable/email"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/common_phone_input_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_18"
        android:singleLine="true"
        tools:ignore="TextContrastCheck" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_20" />

    <LinearLayout
        android:id="@+id/reset_Q_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer"
            android:padding="15dp"
            android:gravity="center|start"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"

            app:drawableStartCompat="@drawable/answer" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_forget_answer"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/write"
            android:drawablePadding="@dimen/dp_15"
            android:hint="@string/answer_input_hint"
            android:inputType="text"
            android:paddingHorizontal="@dimen/dp_20"
            android:paddingVertical="@dimen/dp_18"
            android:singleLine="true"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:background="@color/white"
        android:visibility="gone"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/reset_password"
            android:textColor="#039BE5"
            android:textSize="20sp" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_reset_password1"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/register_password_hint1"
            android:inputType="textPassword"
            android:maxLength="18"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true" />

        <View style="@style/HorizontalLineStyle" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_reset_password2"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/register_password_hint2"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="18"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <com.hjq.widget.view.SubmitButton
        android:id="@+id/btn_password_forget_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_30"
        android:clickable="false"
        android:text="@string/common_step_next"
        android:textSize="20sp"
        android:textColor="@color/white" />

</LinearLayout>