<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SpeechRecognitionActivity"
    android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:scrollbars="vertical"
            android:layout_gravity="top"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient_button_down"
            >

            <EditText
                android:id="@+id/et_result"
                android:hint="识别内容"
                android:inputType="textMultiLine"
                android:background="@null"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:gravity="start"
                android:textColorHint="@color/common_text_hint_color"

                />

        </androidx.core.widget.NestedScrollView>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient_button_up">
        <ImageButton
            android:id="@+id/open_folder_for_audio"
            android:contentDescription="@string/open_folder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/vector_drawable_folder"
            android:background="#00000000"
            android:padding="2dp"
            />
        <ImageButton
            android:id="@+id/delete_result"
            android:contentDescription="@string/delete_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/vector_drawable_delete_2"
            android:background="#00000000"

            />
        <ImageButton
            android:id="@+id/audio_record"
            android:contentDescription="@string/audio_control"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/vector_drawable_voice_1"
            android:background="#00000000"

            />

        <ImageButton
            android:id="@+id/copy_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/cancel_synthesis_teak"
            android:scaleType="centerInside"
            android:src="@drawable/vector_drawable_copy_text" />

    </LinearLayout>
</LinearLayout>